# countryinfo-rs

./: Cargo.toml  LICENSE  README.md  india.json
data/: india.json
examples/: get_country_info.rs
src/: country.rs  countryinfo.rs  geo_json.rs  lib.rs
