[package]
name = "countryinfo-rs"
version = "0.1.0"
edition = "2021"
authors = ["Malhar Vora <vbmade2000@gmail.com>"]
description = "A crate to get information about countries."
readme = "README.md"
repository = "https://github.com/vbmade2000/countryinfo-rs"
license = "MIT"
keywords = ["country", "information"]

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
